<resources>
    <string name="app_name">Assignment 2</string>
    <string name="life_hack_or_myth">Life Hack or Myth?</string>
    <string name="test_your_knowledge_of_urban_myth">Test your knowledge of urban myth!</string>
    <string name="life_hack_or_urban_myth">life hack or Urban myth</string>
    <string name="start">Start</string>
    <string name="life_hack_or_urban_mythh">Life hack or Urban myth</string>
    <string name="test_your_knowledge_of_urban_myths">Test your knowledge of urban myths</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="hack_true">Hack (True)</string>
    <string name="myth_false">Myth (False)</string>
    <string name="next">Next</string>
    <string name="review">Review</string>
    <string name="todo01">TODO</string>
    <string name="todo03">TODO</string>
</resources>