<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6750A4"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="355dp"
        android:layout_height="115dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="21dp"
        android:fontFamily="monospace"
        android:text="@string/life_hack_or_urban_mythh"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/test_your_knowledge_of_urban_myths"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/black"
        android:text="@string/start"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="164dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bat" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139dp"
        android:layout_height="168dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo9"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="116dp"
        android:layout_height="166dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/camera" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="135dp"
        android:layout_height="144dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:srcCompat="@drawable/bat" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="101dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo11"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/spider" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="106dp"
        android:layout_height="78dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/todo12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/spider" />
</androidx.constraintlayout.widget.ConstraintLayout>
