<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6750A4"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="377dp"
        android:layout_height="94dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/hackButton"
        android:layout_width="117dp"
        android:layout_height="96dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/hack_true"
        app:layout_constraintStart_toEndOf="@+id/mythButton"
        app:layout_constraintTop_toBottomOf="@+id/questionText" />

    <Button
        android:id="@+id/mythButton"
        android:layout_width="117dp"
        android:layout_height="96dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/myth_false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="170dp"
        android:backgroundTint="@color/black"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hackButton" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="112dp"
        android:layout_height="163dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="170dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mythButton"
        app:srcCompat="@drawable/creepy_ghost"
        tools:ignore="ContentDescription,HardcodedText" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="112dp"
        android:layout_height="163dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="155dp"
        android:contentDescription="@string/todo03"
        app:layout_constraintStart_toEndOf="@+id/nextButton"
        app:layout_constraintTop_toBottomOf="@+id/hackButton"
        app:srcCompat="@drawable/creepy_ghost" />
</androidx.constraintlayout.widget.ConstraintLayout>